--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
   <h1><strong>How to submit homework</strong></h1>
   <p>Please use one of the three methods below</p>
 
-  <h2><a href="_markup/method1.md">Method 1: The easiest but most annoying way</a></h2>
-  <h2><a href="_markup/method2.md">Method 2: Using codespaces</a></h2>
-  <h2><a href="_markup/method3.md">Method 3: Using git clone (recommend)</a></h2>
+  <h2><a href="_markup/method1.html">Method 1: The easiest but most annoying way</a></h2>
+  <h2><a href="_markup/method2.html">Method 2: Using codespaces</a></h2>
+  <h2><a href="_markup/method3.html">Method 3: Using git clone (recommend)</a></h2>
 
   <hr>
   <p style="font-size: small; color: gray;">
